fix checkbox alignment (#273)

--- a/src/js/checkbox/index.scss
+++ b/src/js/checkbox/index.scss
@@ -52,12 +52,14 @@
 
   &-icon {
     padding: 10px;
+    padding-left: 0;
     line-height: 0;
     outline: 0;
     fill: rgba(0, 0, 0, 0.54);
 
     @include medium {
       padding: 5px;
+      padding-left: 0;
     }
   }
 
